--- a/.github/workflows/reusable.yaml
+++ b/.github/workflows/reusable.yaml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: ls -a
+      - run: ls -al
   log-context-and-inputs:
     runs-on: ubuntu-latest
     steps:
