--- a/.github/workflows/reusable.yaml
+++ b/.github/workflows/reusable.yaml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: ls -al
       - run: ls -al .github/
+      - run: tree .github/
   log-context-and-inputs:
     runs-on: ubuntu-latest
     steps:
